Improve web interface. Add caching

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -6,8 +6,13 @@
     <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
 </head>
 <body>
-    <form onSubmit="return checkAnswer();">
-        <input id="answer" type="text" maxlength="55" class="box" autofocus />
+    <form onSubmit="return redirect();">
+        <input id="name" type="text" maxlength="55" class="box" autofocus />
+        <select id="region">
+            {% for region in regions %}
+                <option value="{{ region }}">{{ region }}</option>
+            {% endfor %}
+        </select>
         <input type="submit" class="submit" value="SUBMIT" />
     </form>
 </body>
