Gets team stats. More logging, error handling

--- a/pyleagueweb/pyleagueweb/templates/errors/other.html
+++ b/pyleagueweb/pyleagueweb/templates/errors/other.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>no match history</title>
+    <title>heyo</title>
 </head>
 <body>
-    you exist but don't have a history
+    {{ error }}
 </body>
 </html>
