Add navigation to error page

--- a/pyleagueweb/pyleagueweb/templates/errors/other.html
+++ b/pyleagueweb/pyleagueweb/templates/errors/other.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     {{ error }}
+    <br>
+    <a href="{{ url_for('playground.search_player') }}">back foul fiend</a>
 </body>
 </html>
